# SoftwareDevelopmentVIMMO

./: .gitignore  Dockerfile  Jenkinsfile  R139.json  README.md  compose.yaml  docker-compose.yml  environment.yaml  prob_gene.txt  problem_url  pyproject.toml  pytest.ini  requirements.txt  requirements_deprecated.txt  run.py
APIapp/: __init__.py  endpoints.py  main.py
database_prework/: base_table.py  create_db.py  create_newdb.py  each_paneld.py  extracted_rcodes.json  get_json.py  jason_all_data.py  latest_panel_versions.csv  panel_data.db
database_prework/Panelapp/: all_panel.json  base_table.py  create_db.py  genes.csv  get_json.py
database_prework/bed/: genes.txt  get_bed.py  gtf2bed.py  gtf2bed38.py  unmatched_37_hgnc_ids.txt  unmatched_38_hgnc_ids.txt  unmatched_hgnc38_ids_nonurl.txt  unmatched_hgnc_ids.txt  unmatched_to_vv.py
database_prework/createdb/: all_panel.json  archived_data.csv  create_newdb.py  each_paneld.py  genes.csv  genes_exons38.bed  get_version.py  historic_tests.csv  jason_all_data.py  latest_panel_versions.csv  patient_info.csv
database_prework/vv_test/: genes4bed.txt  problem_genes_server_errors.txt  test_vv.py  testvv2.py
db/: db.py
docs/: conf.py  index.rst
logger/: logging_config.py
logs/Sprint - NGTD/: configure.py  hello.py  logger.py  logging_congifg.py
test/: test_api.py  test_arg_validator.py  test_db.py  test_endpoints.py  test_panelapp.py  test_parser.py
test_mo/: mo_validate.py  test_mo.py
test_vimmo/: test_arg_validator.py  test_db.py  test_local_bed.py  test_panelapp.py  test_variant_validator.py
test_vimmo/integrationtests/: test_panel_download_endpoints.py  test_panel_endpoints.py  test_panel_local_download_endpoints.py
test_vimmo/unittests/: test_arg_validator.py  test_panelapp.py
utils/: panelapp.py
vimmo/: _version.py  main.py
vimmo/API/: __init__.py  endpoint_process_func.py  endpoints.py
vimmo/db/: db.py  db_downgrade.py  db_query.py  db_update.py  panels_data.db  (+5 more)
(+14 files in other folders)
