[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vimmo"
version = "0.1.3"
description = "App that gives you stuff"
readme = "README.md"
authors = [
    {name = "The Boys", email = "theboys.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
requires-python = ">=3.13"
dependencies = [
    "flask",
    "flask-restx",
    "requests",
    "pandas",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["vimmo*", "test_vimmo*"]  # Added test directory

[tool.setuptools.package-data]
"vimmo" = [
    "db/*.db",
    "utils/*.txt",  # Added to include problem_genes.txt
    "db/logs/*"     # Added to include logs
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "unittest2"
]

[project.scripts]
vimmo = "vimmo.main:main"
dbscheduler = "vimmo.db.scheduler:run_scheduler"